# wave-sim

./: CMakeLists.txt  README.md
include/: fluid.h  input.h  random.h  renderer.h
include/SDL/: SDL2.h
src/: fluid.cpp  input.cpp  main.cpp  random.cpp  renderer.cpp
